[build-system]
requires = ["setuptools",
            "wheel",
            "Cython",
            "ms_deisotope >= 0.0.36",
            "glypy >= 1.0.6",
            "glycopeptidepy >= 0.0.15",
            "oldest-supported-numpy; python_version >= '3.8'",
            "numpy==1.16.1; python_version <= '3.7' and python_version >= '3'",
            "numpy==1.13.3; python_version=='2.7'",
           ]